fixed problem with white space on the bottom of viewport

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  min-height: 100vh;
   text-align: center;
   background-color: #cfd8dc8f;
 }
