--- a/src/components/PhotosList/PhotosList.module.css
+++ b/src/components/PhotosList/PhotosList.module.css
@@ -1,5 +1,5 @@
 .box{
-    margin:24px;
+    padding:24px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
